added background layer added an obstacle on the background

--- a/app/app.css
+++ b/app/app.css
@@ -1,1 +1,1 @@
-#game_container{width:1000px;height:1000px}#playerCanvas{background-color:#7fff00}
+#game_container{width:1000px;height:1000px}#player1_layer{background-color:#7fff00}
