--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,8 +1,20 @@
 #game_container{
+    position: relative;
     width: 1000px;
     height: 1000px;
 }
 
-#playerCanvas {
-    background-color: chartreuse;
+#player1_layer {
+    z-index: 1;
+}
+
+#background_layer{
+    z-index: 0;
+    background-color: #ebff69;
+}
+
+.layer {
+    position: absolute;
+    left: 0;
+    top: 0;
 }
